# turtlebot-mpc

./: .gitignore  .gitmodules  LICENSE  README.txt  ROS2_HELP.txt  rviz_config_v1.rviz
install/: local_setup.sh  setup.sh
install/mpc-tracker/share/ament_index/resource_index/package_run_dependencies/: mpc-tracker
install/mpc-tracker/share/mpc-tracker/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/aruco_markers/: Dockerfile  README.md
src/aruco_markers/aruco_markers/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/aruco_markers/aruco_markers/include/aruco_markers/: aruco_markers.hpp  utils.hpp
src/aruco_markers/aruco_markers/src/: aruco_markers.cpp  main.cpp  utils.cpp
src/aruco_markers/aruco_markers/test/: test_aruco_markers.cpp
src/aruco_markers/aruco_markers_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/aruco_markers/aruco_markers_msgs/msg/: Marker.msg  MarkerArray.msg
src/aruco_markers/scripts/: format.sh  unit_test.sh
src/evaluation/: evaluation.py  summary_plots.py
src/mpc-tracker/: CMakeLists.txt  package.xml
src/mpc-tracker/evaluation/: evaluation.py  summary_plots  summary_plots.py
src/mpc-tracker/launch/: launch.py
src/mpc-tracker/rosbag2/bag_type_path0_N15_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path0_N30_Q1_1_1_1_P1_1_R1_1/: bag_type_path0_N30_Q1_1_1_1_P1_1_R1_1_0.mcap  metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path1_N15_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path1_N30_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path2_N15_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path2_N30_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path3_N15_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/bag_type_path3_N30_Q1_1_1_1_P1_1_R1_1/: metadata.yaml
src/mpc-tracker/rosbag2/rosbag2_2026_04_17-11_10_40/: metadata.yaml
src/mpc-tracker/src/: controller.cpp  path_planner.cpp  traveled_path.cpp  travelled_path.cpp
