<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_markers</name>
  <version>0.0.3</version>
  <description>A ros2 node for detecting aruco markers in camera images</description>
  <maintainer email="davewbrwn@gmail.com">David Brown</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/namo-robotics/aruco_markers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>libopencv-dev</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>aruco_markers_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>